<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageButton
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrowleft"
        android:text="@string/button_back"
        android:padding="25dp"
        android:background="#00FFFFFF"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/desc_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="120dp"
        android:paddingHorizontal="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/login_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_text2"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="250dp"
        android:paddingHorizontal="25dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:drawableStart="@drawable/username"
            android:drawablePadding="8dp"
            android:padding="16dp"
            android:autofillHints="username"
            android:inputType="text"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:padding="16dp"
            android:autofillHints="password"
            android:inputType="textPassword"/>

        <ImageButton
            android:id="@+id/btnsubmit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_background"
            android:src="@drawable/arrowright"
            android:layout_marginTop="35dp"
            android:layout_marginStart="300dp"
            android:text="@string/button_submit"
            android:contentDescription="@string/desc_submit" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>