<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/notification"
        android:title="@string/notification"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menuEditProfile"
        android:title="@string/profile_submenu"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

<!--    <item-->
<!--        android:id="@+id/menuProfile"-->
<!--        android:icon="@drawable/profilnotification"-->
<!--        android:title="@string/profile"-->
<!--        app:showAsAction="always">-->

<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/profile"-->
<!--                android:title="@string/profile_submenu"-->
<!--                app:showAsAction="always"/>-->
<!--            <item-->
<!--                android:id="@+id/logout"-->
<!--                android:title="@string/logout"-->
<!--                app:showAsAction="always"/>-->
<!--        </menu>-->
<!--    </item>-->
</menu>