<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        <include-->
        <!--            layout="@layout/toolbar"-->
        <!--            android:layout_width="60dp"-->
        <!--            android:layout_height="match_parent"/>-->

        <FrameLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_item"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/arrowleft"
                    android:contentDescription="@string/profile"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:background="@drawable/custom_view2dashboard">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/goods"
                        android:layout_marginTop="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="25dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item_id"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:paddingHorizontal="10dp"/>

                        <EditText
                            android:id="@+id/idProfile"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:hint="@string/desc_id"
                            android:textSize="13sp"
                            android:layout_marginTop="10dp"
                            android:paddingHorizontal="10dp"
                            android:inputType="text"
                            android:autofillHints="id"
                            android:background="@drawable/custom_view3dashboard"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="25dp"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name_of_item"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:paddingHorizontal="10dp"/>

                        <EditText
                            android:id="@+id/nameProfile"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:hint="@string/desc_name"
                            android:textSize="13sp"
                            android:layout_marginTop="10dp"
                            android:paddingHorizontal="10dp"
                            android:inputType="text"
                            android:autofillHints="name"
                            android:background="@drawable/custom_view3dashboard"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="25dp"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/UoM"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:paddingHorizontal="10dp"/>

                        <EditText
                            android:id="@+id/usernameProfile"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:hint="@string/desc_uom"
                            android:textSize="13sp"

                            android:layout_marginTop="10dp"
                            android:paddingHorizontal="10dp"
                            android:inputType="text"
                            android:autofillHints="username"
                            android:background="@drawable/custom_view3dashboard"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="25dp"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/type_of_item"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:paddingHorizontal="10dp"/>

                        <EditText
                            android:id="@+id/oldPWProfile"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:hint="@string/desc_type"
                            android:textSize="13sp"
                            android:layout_marginTop="10dp"
                            android:paddingHorizontal="10dp"
                            android:inputType="textVisiblePassword"
                            android:autofillHints="password"
                            android:background="@drawable/custom_view3dashboard"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="25dp"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/stock"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:paddingHorizontal="10dp"/>

                        <EditText
                            android:id="@+id/newPWProfile"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:hint="@string/desc_stock"
                            android:textSize="13sp"
                            android:layout_marginTop="10dp"
                            android:paddingHorizontal="10dp"
                            android:inputType="textVisiblePassword"
                            android:autofillHints="password"
                            android:background="@drawable/custom_view3dashboard"/>
                    </LinearLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_add_stock"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="240dp"/>

                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>